Colouring the values by source
If the values originate from MQTT telegrams, the values are displayed in white. If the values are from Openweather, they are displayed in yellow.

--- a/MMM-Currentweather-MQTT.css
+++ b/MMM-Currentweather-MQTT.css
@@ -15,3 +15,18 @@
 .MMM-Currentweather-MQTT .humidity-padding {
   padding-bottom: 6px;
 }
+.MMM-Currentweather-MQTT .red {
+  color: red;
+}
+.MMM-Currentweather-MQTT .green {
+  color: green;
+}
+.MMM-Currentweather-MQTT .blue {
+  color: blue;
+}
+.MMM-Currentweather-MQTT .yellow {
+  color: yellow;
+}
+.MMM-Currentweather-MQTT .white {
+  color: white;
+}
